--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "editor.fontFamily": "'Mononoki', 'monospace', monospace",
+    "editor.fontFamily": "'Monofur Nerd Font', 'monospace', monospace",
     "editor.inlineSuggest.fontFamily": "default"
 }
